--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": "6.10.0"
+  },
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
