--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "6.10.0"
+    "node": "^6.10.0"
   },
   "dependencies": {
     "ejs": "^2.5.6",
